[FORK][FIX] OCL impl uses dlopen

--- a/src/gpu/ocl/CMakeLists.txt
+++ b/src/gpu/ocl/CMakeLists.txt
@@ -39,5 +39,7 @@ list(APPEND SOURCES ${kernel_list_src})
 
 set(OBJ_LIB ${LIB_PACKAGE_NAME}_gpu_ocl)
 add_library(${OBJ_LIB} OBJECT ${SOURCES})
+set_property(GLOBAL APPEND PROPERTY DNNL_SUBDIR_EXTRA_SHARED_LIBS
+    ${CMAKE_DL_LIBS})
 set_property(GLOBAL APPEND PROPERTY DNNL_LIB_DEPS
     $<TARGET_OBJECTS:${OBJ_LIB}>)
